# ml_training

./: Housing_predictions_using_scikitlearn_pipeline.ipynb  README.md  env.yml  non_stdcode.py  nonstandardcode.py  pyproject.toml  setup.cfg
docs/: modules.rst
docs/source/: conf.py
src/housing_data_package/: ingest.py  score.py  train.py
src/housing_data_package.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
